# llm-guided-evolution

./: .gitignore  .gitmodules  README.md  change.txt  cleanup.sh  debuggin.py  environment.yml  new_server.py  pyproject.toml  requirements.txt  run.py  run.sh  run_improved.py
0/: xXx0IQJvVDQhfsfUWYnuUT6Gwl6.sh  xXx0KIzKdivnM3fW95tE8r7m6T3.sh  xXx0KmYjpkDxLHhrQocrzJ1ZqiQ.sh  xXx0MjICovSasBFmqNU59cVhaIs.sh  xXx0UlRHpEvFndyGIZZB5pOjgYk.sh  xXx0V6Ibrm5NT3EtWl6D1To7LmQ.sh  xXx0WogBDzoS6xfED72TQSO7j5U.sh  xXx0WzEsPkWc84DvxotfSorJ5iY.sh  xXx0fPjw3sXcatplSqcdS1WUrUv.sh  xXx0hSryjaf4ZvuQl0NpfI0uSRC.sh  xXx0nDOQ9sAPRIISSBvkAMsa1xV.sh  xXx0ud5ebh33TQSTJYPhOBuf9EH.sh  xXx0vUUifwY6RBmUaPp96vVa9gJ.sh  xXx16738TqSLwmqQQn0ElZoL4e7.sh  xXx19Y3UHnROvHdkpZ6BfBllQJX.sh  xXx1FCF9q04KP117PWSBmY0PdaS.sh  xXx1FeYU2IUt3VpKgKGRmpVpV7h.sh  xXx1G3TGcKQYHBtvbTiQherMq8Q.sh  xXx1HHWMrgRpqMTkVeH2h5tpMdQ.sh  xXx1HIll2WdfhXvglf3PR6FvOr6.sh  xXx1K5nHvQhp5FwniCLRVK5fc4p.sh  xXx1KKijQlaTV177poxtNGHCyLR.sh  xXx1Lzg0AdRxZH0yP67L3dsTyeF.sh  xXx1O5ZaK1CZYLazLzGhhUm0Kwc.sh  xXx1PgGwPeAaJNnPivFSh1pwOA4.sh  xXx1WVUGEFc8Tv9a5lqPPQ3XDQA.sh  xXx1WfON0ndBxKzr7phflMfkLtP.sh  xXx1i69X7I4NqJ6g9qgSyXDm29B.sh  xXx1ivASkYezwqbnhvBgWfzBSad.sh  xXx1nUbm8iACeBvKgbmHGwV9ado.sh  xXx1nmM2Z4CqAh6dS1zaWpfno6D.sh  xXx1tgTTZlERWVfcnm0Cc8S6EUF.sh  xXx1uoQzU5UENAhaTt5eQhJ805a.sh  xXx1xUfFU5171Jp54jKFOcR1rfI.sh  xXx21EilgO9s0yOouOOx544PgGx.sh  xXx21wKi7KxtvpzqycP5cY6aR33.sh  xXx247Uzy1nsUTkzRnNjPkxwUGx.sh  xXx276xwBOIRGYl56eQsY5a44Dn.sh  xXx27KkQCbE5sZUipa48ldxMWvj.sh  xXx2B5EFzPowbMPLT2OYmNr6NMc.sh  (+1524 more)
mixtral/: run.sh  run_improved.py
(+180 files in other folders)
