[project]
name = "llm-guided-evolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap==1.4.1",
    "flake8>=7.2.0",
    "google-genai>=1.12.1",
    "numpy>=2.0.2",
    "pytest>=8.3.5",
    "torch==2.6.0",
    "torchvision",
    "transformers",
]
